# fanyi-rs

./: Cargo.toml  readme.md
src/: iciba.rs  main.rs
