[package]
name = "fanyi-rs"
version = "0.1.0"
authors = ["3vilive <ba0ch3ng@foxmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = {version = "1.0.115", features = ["derive"]}
reqwest = "0.10.8"
tokio = {version = "0.2.22", features = ["full"]}
serde-xml-rs = "0.4.0"
url = "2.1.1"
